# comic-book-generator

./: .gitattributes  .gitignore  Dockerfile  README.md
ai-comic-factory/: .env.example  README.md
client/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
client/src/: App.js  App.jsx  index.css  index.js  main.jsx  theme.js
client/src/components/: AppBackground.jsx  BlinkingText.jsx  BookPages.jsx  DebugConsole.jsx  ErrorDisplay.jsx  GameDebugPanel.jsx  GameNavigation.jsx  InfiniteBackground.jsx  LoadingScreen.jsx  Metric.jsx  MicroIntensity.jsx  RotatingMessage.jsx  ServiceStatus.jsx  StoryChoices.jsx  (+6 more)
finetuning/synthetic_data/: format_data.py  generate_synthetic_data_no_batch.py  requirements.txt  synthetic_data.jsonl  system_prompt.md  test.jsonl  test.py  transformed_data.jsonl
server/: .env.example  .gitignore  .session_data.pkl  README.md  api_clients.py  game_logic.py  pyproject.toml  server.py
server/api/: models.py
server/api/routes/: chat.py  health.py  image.py  speech.py  universe.py
server/core/: __init__.py  constants.py  game_logic.py  game_state.py  prompt_utils.py  session_manager.py  setup.py  story_generator.py  story_generators.py  story_orchestrator.py
server/core/generators/: __init__.py  base_generator.py  image_generator.py  image_prompt_generator.py  metadata_generator.py  story_segment_generator.py  text_generator.py  universe_generator.py
server/core/prompts/: cinematic.py  convice.py  formatting_rules.py  hero.py  image_style.py  story_beats.py  system.py  text_prompts.py
server/core/state/: __init__.py  game_state.py
server/core/styles/: comic_styles.json  universe_styles.json
server/game/: game_logic.py
server/game/prompts/: cinematic_system_prompt.py  image_style_prompt.py  system_prompt.py
server/scripts/: run_server.py  test_game.py
server/services/: flux_client.py  mistral_client.py
(+32 files in other folders)
