[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = "API FastAPI pour Hugging Face Space"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
elevenlabs = "^0.2.26"
langchain = "^0.3.15"
langchain-mistralai = "^0.2.4"
requests = "^2.31.0"
aiohttp = "^3.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 